// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-mixed-input-field Renders \`c-mixed-input-field\` with boolean type correctly 1`] = `
<div
  class="v-input c-mixed-input-field v-input--hide-details theme--light v-input--selection-controls v-input--switch ma-0 c-mixed-input-field__switch"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-input--selection-controls__input"
      >
        <input
          aria-checked="false"
          aria-disabled="false"
          name="mixedFieldName"
          role="switch"
          type="checkbox"
          value=""
        />
        <div
          class="v-input--selection-controls__ripple"
        />
        <div
          class="v-input--switch__track theme--light"
        />
        <div
          class="v-input--switch__thumb theme--light"
        >
          <transition-stub
            mode="out-in"
            name="fab-transition"
          />
        </div>
      </div>
      <label
        class="v-label theme--light"
        style="left: 0px; position: relative;"
      >
        false
      </label>
    </div>
  </div>
</div>
`;

exports[`c-mixed-input-field Renders \`c-mixed-input-field\` with boolean type correctly 2`] = `undefined`;

exports[`c-mixed-input-field Renders \`c-mixed-input-field\` with custom props correctly 1`] = `
<div
  class="v-input c-mixed-input-field v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-text-field v-text-field--single-line v-text-field--solo-flat v-text-field--placeholder c-mixed-input-field__text"
  errormessages="First error message,Second error message"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          disabled="disabled"
          name="mixedFieldName"
          placeholder="Mixed field label"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-input-field Renders \`c-mixed-input-field\` with custom props correctly 2`] = `undefined`;

exports[`c-mixed-input-field Renders \`c-mixed-input-field\` with default props correctly 1`] = `
<div
  class="v-input c-mixed-input-field theme--light v-text-field v-text-field--single-line c-mixed-input-field__text"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          name="value"
          placeholder=""
          type="text"
        />
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-input-field Renders \`c-mixed-input-field\` with default props correctly 2`] = `undefined`;

exports[`c-mixed-input-field Renders \`c-mixed-input-field\` with errors correctly 1`] = `
<div
  class="v-input c-mixed-input-field theme--light v-text-field v-text-field--single-line c-mixed-input-field__text"
  errormessages="First error message,Second error message"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          name="value"
          placeholder=""
          type="text"
        />
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-input-field Renders \`c-mixed-input-field\` with errors correctly 2`] = `undefined`;

exports[`c-mixed-input-field Renders \`c-mixed-input-field\` with null type correctly 1`] = `
<div
  class="v-input c-mixed-input-field v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-text-field"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          disabled="disabled"
          name="mixedFieldName"
          type="text"
        />
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-input-field Renders \`c-mixed-input-field\` with null type correctly 2`] = `undefined`;

exports[`c-mixed-input-field Renders \`c-mixed-input-field\` with null type correctly 3`] = `
<c-array-text-field-stub
  class="c-mixed-input-field"
  errormessages=""
  name="mixedFieldName"
  values="0,1,,false,"
/>
`;

exports[`c-mixed-input-field Renders \`c-mixed-input-field\` with null type correctly 4`] = `undefined`;

exports[`c-mixed-input-field Renders \`c-mixed-input-field\` with number type correctly 1`] = `
<div
  class="v-input c-mixed-input-field v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-text-field--placeholder c-mixed-input-field__text"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          name="mixedFieldName"
          placeholder="Mixed field with number type"
          type="number"
        />
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-input-field Renders \`c-mixed-input-field\` with number type correctly 2`] = `undefined`;

exports[`c-mixed-input-field Renders \`c-mixed-input-field\` with string type and items correctly 1`] = `
<div
  class="v-input c-mixed-input-field v-input--hide-details theme--light v-input--selection-controls v-input--switch ma-0 c-mixed-input-field__switch"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-input--selection-controls__input"
      >
        <input
          aria-checked="false"
          aria-disabled="false"
          name="mixedFieldName"
          role="switch"
          type="checkbox"
          value=""
        />
        <div
          class="v-input--selection-controls__ripple"
        />
        <div
          class="v-input--switch__track theme--light"
        />
        <div
          class="v-input--switch__thumb theme--light"
        >
          <transition-stub
            mode="out-in"
            name="fab-transition"
          />
        </div>
      </div>
      <label
        class="v-label theme--light"
        style="left: 0px; position: relative;"
      >
        false
      </label>
    </div>
  </div>
</div>
`;
